@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.99 2005/04/02 22:03:06 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.100 2005/04/04 04:49:28 allanonjl Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
+  03 Apr 2005; John N. Laliberte <allanonjl@gentoo.org>
+  Fixed 2 bugs in Users.py.
+  
   02 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Removed reiserfs from the supported filesystems
 
